refactored code for cleaner structure

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,7 @@
     />
 
     <!-- Open Graph data that will be rendered by the server -->
-    <meta property="og:title" content="_OG_TITLE_"/>
-    <meta property="og:type" content="_OG_TYPE_"/>
-    <meta property="og:url" content="_OG_URL_"/>
-    <meta property="og:image" content="_OG_IMAGE_"/>
+    <og-data />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
